Added more content to wizardry.html. Added new images in wizardry/img/. Added more content to enemies and missions .txt files.

--- a/wolong/equipment/wizardry/wizardry.html
+++ b/wolong/equipment/wizardry/wizardry.html
@@ -1324,6 +1324,184 @@
                         locked on to prior to casting the spell.
                     </td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Cloud Stance</span>
+                        <img class="object-none" src="./img/cloud_stance.png" alt="">
+                    </div></td>
+                    <td>520</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>
+                        For a certain period of time, reduces consumption of Spirit when deflecting.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Unseeable Form</span>
+                        <img class="object-none" src="./img/unseeable_form.png" alt="">
+                    </div></td>
+                    <td>1050</td>
+                    <td>8</td>
+                    <td>12</td>
+                    <td>
+                        For a certain period of time, turns your body invisible and undetectable by enemies.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Frozen Spear Trap</span>
+                        <img class="object-none" src="./img/frozen_spear_trap.png" alt="">
+                    </div></td>
+                    <td>730</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>
+                        Sets an icy trap by your feet. Enemies that step on the trap will be impaled by sharp icicles and take
+                        damage.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Frozen Malice</span>
+                        <img class="object-none" src="./img/frozen_malice.png" alt="">
+                    </div></td>
+                    <td>570</td>
+                    <td>6</td>
+                    <td>3</td>
+                    <td>
+                        Generates a large icicle to the front. The icicle will accelerate forward or toward the target you locked
+                        on to prior to casting the spell.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Alacrity Haste</span>
+                        <img class="object-none" src="./img/alacrity_haste.png" alt="">
+                    </div></td>
+                    <td>420</td>
+                    <td>4</td>
+                    <td>7</td>
+                    <td>
+                        Increaes movement speed for a certain period of time.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Obscuring Frost</span>
+                        <img class="object-none" src="./img/obscuring_frost.png" alt="">
+                    </div></td>
+                    <td>470</td>
+                    <td>20</td>
+                    <td>7</td>
+                    <td>
+                        Generates fog in the area that affects enemies in proximity with reduced targeting ability for a certain 
+                        period of time.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Ice Weapon</span>
+                        <img class="object-none" src="./img/ice_weapon.png" alt="">
+                    </div></td>
+                    <td>680</td>
+                    <td>12</td>
+                    <td>7</td>
+                    <td>
+                        For a certain period of time, enchants your current melee weapon with Ice.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Unrelenting Frost</span>
+                        <img class="object-none" src="./img/unrelenting_frost.png" alt="">
+                    </div></td>
+                    <td>470</td>
+                    <td>15</td>
+                    <td>3</td>
+                    <td>
+                        Hurls a blast of ice shards. Continue shooting by holding down the input for Wizardry Spells.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Frozen Arrow</span>
+                        <img class="object-none" src="./img/frozen_arrow.png" alt="">
+                    </div></td>
+                    <td>420</td>
+                    <td>10</td>
+                    <td>3</td>
+                    <td>
+                        Creates a frost that turns into icy pillars after a certain period of time. The icy pillars will 
+                        accelerate forward or toward the target that was locked on to when they were summoned.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Phantom Icicle</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>630</td>
+                    <td>30</td>
+                    <td>12</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Scarlet Crystal</a>
+                        <br><br>
+
+                        Releases curse bolts that create mysterious fog on contact with enemies or terrain. Enemies that touch 
+                        the fog will have reduced targeting ability for a set period of time.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Aqua Blink</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>360</td>
+                    <td>20</td>
+                    <td>7</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wizardry Spell Mastery</a>
+                        <br><br>
+
+                        Allows you to instantly teleport a certain distance.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Ominous Chill</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>780</td>
+                    <td>40</td>
+                    <td>15</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wizardry Spell Mastery</a>
+                        <br><br>
+
+                        Summons small icicles to continuously fall on the locked-on target or on a point at a certain distance 
+                        to the front.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Malignant Icefall</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>420</td>
+                    <td>25</td>
+                    <td>7</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Scarlet Crystal</a>
+                        <br><br>
+
+                        Summons a large icicle to fall on the locked-on target or on a point at a certain distance to the front.
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
