--- a/wolong/equipment/wizardry/wizardry.html
+++ b/wolong/equipment/wizardry/wizardry.html
@@ -416,7 +416,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Focus Zone</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/focus_zone.png" alt="">
                     </div></td>
                     <td>890</td>
                     <td>20</td>
@@ -445,7 +445,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Barbed Nightmare</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/barbed_nightmare.png" alt="">
                     </div></td>
                     <td>1050</td>
                     <td>40</td>
@@ -654,7 +654,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Engulfing Inferno</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/engulfing_inferno.png" alt="">
                     </div></td>
                     <td>420</td>
                     <td>25</td>
@@ -686,7 +686,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Scorch Sweep</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/scorch_sweep.png" alt="">
                     </div></td>
                     <td>520</td>
                     <td>20</td>
@@ -929,7 +929,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Lion's Roar</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/lions_roar.png" alt="">
                     </div></td>
                     <td>520</td>
                     <td>20</td>
@@ -946,7 +946,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Illusionary Shell</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/illusionary_shell.png" alt="">
                     </div></td>
                     <td>1050</td>
                     <td>40</td>
@@ -1184,7 +1184,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Devouring Sweep</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/devouring_sweep.png" alt="">
                     </div></td>
                     <td>420</td>
                     <td>13</td>
@@ -1200,7 +1200,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Molten Calamity Thorn</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/molten_calamity_thorn.png" alt="">
                     </div></td>
                     <td>840</td>
                     <td>30</td>
@@ -1456,7 +1456,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Aqua Blink</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/aqua_blink.png" alt="">
                     </div></td>
                     <td>360</td>
                     <td>20</td>
@@ -1472,7 +1472,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Ominous Chill</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/ominous_chill.png" alt="">
                     </div></td>
                     <td>780</td>
                     <td>40</td>
