Added more content to martial_arts.html.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -430,26 +430,28 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Lightspeed Gust</span>
-                        <span class="italic">(Dire Tiger)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>780</td>
-                    <td>
+                    <td>                        
                         Jump backward, then advance while thrusting. <br><br> [Additional Effect: at High Spirit] Enhances damage and
-                        prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+                    
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Dire Tiger</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Violent Sandstorm</span>
-                        <span class="italic">(Sirius)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>630</td>
                     <td>
                         Charge forward at rapid speed while holding down the Arts input. Release the Arts input to then perform
                         a slashing attack. <br><br> [Additional Effect: at High Spirit] Enhances damage and prevents staggering from
-                        incoming attacks except for powerful attacks by enemies.
+                        incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Sirius</span></span>
                     </td>
                 </tr>
             </table>
@@ -589,63 +591,68 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Cosmic Syzygy</span>
-                        <span class="italic">(Saint's Virtue)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>320</td>
                     <td>
                         Charge forward into a thrust. When the attack hits, you can use the force of the blow to repel yourself
                         backward. <br><br> [Additional Input: Combo] Press the Arts input again upon touching down to charge forward once
-                        more.
+                        more. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Saint's Virtue</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Dawning Sky</span>
-                        <span class="italic">(Heaven's Reliance)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>310</td>
                     <td>
                         Lunge forward to perform a slashing attack, then jump into the air. <br><br> [Additional Effect: at High Spirit]
-                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Heaven's Reliance</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Starlight Blade</span>
-                        <span class="italic">(Sword of Yu the Great)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>260</td>
                     <td>
                         Split your weapon, shooting it out in succession. <br><br> [Additional Input: Charge Attack] Hold down the Arts
                         input upon activation to build up energy. The power of the attack increases according to the charge
-                        duration.
+                        duration. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Sword of Yu the Great</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Sun Piercer</span>
-                        <span class="italic">(Halo)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
                         Perform a fierce forward-facing thrust. <br><br> [Additional Input: Combo] Press the Arts input again to perform 
-                        a follow-up attack.
+                        a follow-up attack. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Halo</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Sword of Chaos</span>
-                        <span class="italic">(Ritual Sword of Chaos)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
                         Create a sword of Demonic Qi and strike with it. <br><br> [Additional Effect: at High Spirit] Enhances damage and
-                         prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Ritual Sword of Chaos</span></span>
                     </td>
                 </tr>
             </table>
@@ -786,26 +793,28 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Shimmering Sun</span>
-                        <span class="italic">(Drought Demon Blade)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
                         Pounce on the enemy with your blade, moving behind them, then turn around and perform a thrust. <br><br> 
                         [Additional Effect: at High Spirit] Wreaths your weapon in flames. Also enhances damage and prevents 
-                        staggering from incoming attacks except for powerful attacks by enemies.
+                        staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Drought Demon Blade</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Thunderous Impact</span>
-                        <span class="italic">(Guding Blade)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
                         After a brief pause to build up energy, charge forth and slash. <br><br> [Additional Effect: at High Spirit]
-                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Guding Blade</span></span>
                     </td>
                 </tr>
             </table>
@@ -946,37 +955,40 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Feasting Ursine</span>
-                        <span class="italic">(Triumphant Conquest)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
                         Jump into the air and fling your weapon down, causing a shockwave. <br><br> [Additional Effec: at High Spirit]
-                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Triumphant Conquest</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Mongrel's Rampart</span>
-                        <span class="italic">(Curve-Headed Glaive)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
                         Thrust your weapon into the ground, then kick it back up in a swing. <br><br> [Additional Effect: at High Spirit]
-                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Curve-Headed Glaive</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Soaring Phoenix</span>
-                        <span class="italic">(Azure Dragon Crescent Glaive)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>320</td>
                     <td>
                         Perform a powerful strike on the enemy. When the attack hits, you can use the force of the blow to propel
-                        yourself into the air. Usable while on the ground or airborne.
+                        yourself into the air. Usable while on the ground or airborne. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Azure Dragon Crescent Glaive</span></span>
                     </td>
                 </tr>
             </table>
@@ -1106,14 +1118,15 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Prancing Dragon</span>
-                        <span class="italic">(Sky-Piercing Halberd)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
                         Advance while dragging your weapon along, then swing it upward. <br><br> [Additional Effect: at High Spirit]
                         Wreathes your weapon in flames. Also enhances damage and prevents staggering from incoming attacks except 
-                        for powerful attacks by enemies.
+                        for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Sky-Piercing Halberd</span></span>
                     </td>
                 </tr>
             </table>
@@ -1264,7 +1277,6 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Fanning Peacock</span>
-                        <span class="italic">(Jade-Green Staff)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>470</td>
@@ -1272,31 +1284,35 @@
                         Release fire projectiles from your weapon, attacking your surroundings. <br><br> [Additional Input: Charge Attack]
                         Increase the number of spins by holding down the Martial Arts button. <br><br> [Additional Effect: at High Spirit]
                         Wreathes your weapon in flames. Also enhances damage and prevents staggering from incoming attacks except
-                        for powerful attacks by enemies.
+                        for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Jade-Green Staff</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Nightbird Spin</span>
-                        <span class="italic">(Night Owl Cane)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>470</td>
                     <td>
                         Attack by throwing your weapon forward. <br><br> [Additional Effect: at High Spirit] Enhances damage and
-                        prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Night Owl Cane</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span class="text-boss-skill">Panther's Grit</span>
-                        <span class="italic">(Soaring Ursine Mace)</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
                     <td>630</td>
                     <td>
                         Advance while spinning your weapon, attacking your surroundings. <br><br> [Additional Effect: at High Spirit]
-                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Soaring Ursine Mace</span></span>
                     </td>
                 </tr>
             </table>
