--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -1369,7 +1369,7 @@
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span>Heaven Divide</span>
                         <img class="object-none" src="./img/heaven_divide.png" alt="">
                     </div></td>
                     <td>530</td>
@@ -1379,22 +1379,22 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Heaven Reversal</span>
+                        <img class="object-none" src="./img/heaven_reversal.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Slam your weapon on the ground behind you, causing a shock-wave, then perform a frontal strike.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Mountain Strike</span>
+                        <img class="object-none" src="./img/mountain_strike.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>370</td>
                     <td>
-                        -
+                        Thrust your weapon into the ground and use it as a springboard to unleash a kick.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
