Added more content to martial_arts.html

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -1399,72 +1399,85 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Rising Tides</span>
+                        <img class="object-none" src="./img/rising_tides.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>530</td>
                     <td>
-                        -
+                        Sweep your weapon around while spinning, and strike with it. <br><br> [Additional Input: Barrage]
+                        Increase the number of rotations by holding down the Arts input.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Rock Crash</span>
+                        <img class="object-none" src="./img/rock_crash.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Build momentum with a vertical spin, then channel it into a powerful weapon swing. Usable while on the
+                        ground or airborne.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Sea Split</span>
+                        <img class="object-none" src="./img/sea_split.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Raise your weapon up high, then forcefully swing it to the ground. <br><br> [Additional Input: Charge Attack]
+                        Hold down the Arts input upon activation to build up energy. The attack power increases according to the
+                        charge duration.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Stone Shatter</span>
+                        <img class="object-none" src="./img/stone_shatter.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Wield your weapon to launch stone fragments forward.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Undercurrent Sprint</span>
+                        <img class="object-none" src="./img/undercurrent_sprint.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>530</td>
                     <td>
-                        -
+                        Charge in the desired direction. Press the Arts input while charging to perform a sideways sweeping
+                        attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span class="text-boss-skill">Boulder Glide</span>
+                        <img class="object-none" src="./img/boulder_glide.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>470</td>
                     <td>
-                        -
+                        Swing your weapon out of the ground, flinging clumps of earth at your enemy. <br><br> [Additional Effect: at High Spirit]
+                        Enhances damage and prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Great Club of Polaris</span></span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span class="text-boss-skill">Mountain Buster</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Repeatedly slam the ground where you are standing. <br><br> [Additional Effect: at High Spirit] Enhance
+                        damage and prevents staggering from incoming attacks except for powerful attacks by enemies.
+                        <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Quake Griffin Hammer</span></span>
                     </td>
                 </tr>
             </table>
