Added more content to martial_arts.html.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -1534,82 +1534,88 @@
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Heaven Divide</span>
+                        <img class="object-none" src="./img/heaven_divide.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>530</td>
                     <td>
-                        -
+                        Brandish your weapon boldly, then swing it with all your strength.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Heaven Reversal</span>
+                        <img class="object-none" src="./img/heaven_reversal.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Slam your weapon on the ground behind you, causing a shock-wave, then perform a frontal strike.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Impregnable Keep</span>
+                        <img class="object-none" src="./img/impregnable_keep.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>360</td>
                     <td>
-                        -
+                        Take a crouching stance. If you are attacked while in this stance, counterattack with a powerful sweep.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Mountain Strike</span>
+                        <img class="object-none" src="./img/mountain_strike.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>370</td>
                     <td>
-                        -
+                        Thrust your weapon into the ground and use it as a springboard to unleash a kick.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Rising Tides</span>
+                        <img class="object-none" src="./img/rising_tides.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>530</td>
                     <td>
-                        -
+                        Sweep your weapon around while spinning, and strike with it. <br><br> [Additional Input: Barrage]
+                        Increase the number of rotations by holding down the Arts input.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Rock Crash</span>
+                        <img class="object-none" src="./img/rock_crash.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Build momentum with a vertical spin, then channel it into a powerful weapon swing. Usable while on the
+                        ground or airborne.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
-                        <img class="object-none" src="" alt="">
+                        <span>Undercurrent Sprint</span>
+                        <img class="object-none" src="./img/undercurrent_sprint.png" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>530</td>
                     <td>
-                        -
+                        Charge in the desired direction. Press the Arts input while charging to perform a sideways sweeping
+                        attack.
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
-                        <span></span>
+                        <span class="text-boss-skill">Hidden Undercurrents</span>
                         <img class="object-none" src="" alt="">
                     </div></td>
-                    <td>-</td>
+                    <td>320</td>
                     <td>
-                        -
+                        Charge forward with your weapon readied in front of you. <br><br> [Additional Effect: at High Spirit]
+                        Enhances damage and prevents staggering from incoming attacks by enemies. <br><br>
+
+                        <span class="text-red-600 font-bold">Weapon: <span class="italic">Vermillion Bird Greataxe</span></span>
                     </td>
                 </tr>
             </table>
